--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pd-ui",
+  "name": "redux-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
