--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/.eslintcache
-.eslintcache
 
 # testing
 /coverage
@@ -23,3 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock*
+/.eslintcache*
+.eslintcache*
