--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
-    "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.9.2"
+    "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.9.2",
+    "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7"
   },
   "scripts": {
     "start": "react-scripts start",
