--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.9.2",
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
+    "query-string": "^6.13.7",
     "react": "^17.0.1",
+    "react-collapsible": "^2.8.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
