--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
-    "react-app-polyfill": "^2.0.0",
+    "moment": "^2.29.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
     "react-collapsible": "^2.8.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
