--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "pm2": "^4.5.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
