--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "global": "^4.4.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
     "pm2": "^4.5.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
