--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-collapsible": "^2.8.1",
     "react-dom": "^17.0.1",
+    "react-idle-timer": "^4.5.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
