--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.9.2",
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
