--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-scripts": "4.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
