--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "global": "^4.4.0",
+    "jose": "3",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "nodemon": "^2.0.7",
