--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jose": "3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
+    "lorem-ipsum": "^2.0.3",
     "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "pm2": "^4.5.1",
@@ -33,6 +34,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-virtualized": "^9.22.3",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
     "serve": "^11.3.2",
