--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,15 +10,20 @@ cache:
     - node_modules/
     - .yarn
 
+before_script:
+  # Install yarn as outlined in (https://yarnpkg.com/lang/en/docs/install/#alternatives-stable)
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  # Make available in the current terminal
+  - export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
+  - yarn install --cache-folder .yarn
+
 build:
-  image: node:12.18.4
+  image: node:12.20.1
   stage: build
   tags:
     - 06d-ui-runner
   script:
-    - npm install -g yarn
-    - yarn config set cache-folder .yarn
-    - yarn install --pure-lockfile --cache-folder .yarn
+    - yarn --version
     - rm -rf build
     - CI=false yarn install
     - CI=false yarn build
