--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,7 @@ cache:
     - .yarn
 
 before_script:
-  # Install yarn as outlined in (https://yarnpkg.com/lang/en/docs/install/#alternatives-stable)
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  # Make available in the current terminal
+  - npm install -g yarn
   - export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
   - yarn install --cache-folder .yarn
 
