--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,13 @@ stages:
   - test
   - deploy
 
+before_script:
+  - npm install --global yarn
+  - yarn install
+
 cache:
   paths:
     - node_modules/
-    - .yarn
-
-before_script:
-  - npm install -g yarn
-  - export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"
-  - yarn install --cache-folder .yarn
 
 build:
   image: node:12.20.1
