--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.3",
     "react-virtualized": "^9.22.3",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
