--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,11 @@ cache:
   paths:
     - node_modules/
 
-build:
+.build:
   #image: node:12.20.1
   stage: build
   tags:
-    - 06d-ui-runner
+    - ui-runner
   script:
     - npm install
     - $env:CI=$false; npm run build
