--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others \"yarn start\" \"yarn server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -82,5 +84,8 @@
       "!src/mockdata",
       "!src/services/endpoint.ts"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0"
   }
 }
