--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "nodemon server.js",
+    "server": "nodemon ./server/index.js",
     "dev": "concurrently --kill-others \"yarn start\" \"yarn server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
