Alert Unit test cases

--- a/package.json
+++ b/package.json
@@ -74,8 +74,12 @@
       "!src/test-utils",
       "!src/mockdata",
       "!src/services/endpoint.ts",
-      "!/src/features/Container/Protocols/CompareCard.js",
-      "!/src/features/Container/Protocols/CompareCardNew.js"
+      "!src/features/Container/Protocols/CompareCard.js",
+      "!src/features/Container/Protocols/CompareCardNew.js",
+      "!src/features/Container/Protocols/compareTable.js",
+      "!src/features/Container/Search/Data/row.data.js",
+      "!src/features/Container/Search/Data/row.js",
+      "!src/features/Container/Search/Data/search.metadata.js"
     ]
   },
   "devDependencies": {
