--- a/package.json
+++ b/package.json
@@ -89,7 +89,13 @@
     ]
   },
   "husky": {
-    "hooks": {}
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -97,6 +103,7 @@
     "@testing-library/user-event": "^7.1.2",
     "husky": "^6.0.0",
     "pm2": "^4.5.1",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "lint-staged": "^11.0.0"
   }
 }
