--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-virtualized": "^9.22.3",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
+    "source-map-explorer": "^2.5.2",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
@@ -104,8 +105,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "pm2": "^4.5.1",
-    "prettier": "^2.3.1",
-    "lint-staged": "^11.0.0"
+    "prettier": "^2.3.1"
   }
 }
