Send QC API work

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint --fix --ext .js,.jsx .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "browserslist": {
     "production": [
