Fixed linitng warning and defalut table rows

--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": 0
+      "no-console": 0,
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
     }
   },
   "husky": {
