--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test:
   stage: test
 
   tags: 
-    - pd-ui-dev
+    - pd-ui-test
   script:
     - echo "Testing App"
     - npm install
@@ -28,7 +28,7 @@ build:
   stage: build_and_deploy
 
   tags: 
-    - pd-ui-dev
+    - pd-ui-test
 
   before_script:
     - Copy-Item "env_backup.txt" -Destination ".env"
