--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
     "react-virtualized": "^9.22.3",
+    "react-window": "^1.8.6",
     "redux-saga": "^1.1.3",
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
