Unit testing allow failure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ test:
     - npm install
     - npm run test
     - echo "Test successfully!"
+  allow_failure: true
   only:
     refs:
       - develop
