--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
     "redux-saga": "^1.1.3",
+    "replaceall": "^0.1.6",
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
     "universal-cookie": "^4.0.4"
