--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ Perform Sonarqube Analysis and quality gate:
   image: sonarsource/sonar-scanner-cli
   stage: sonar-scan
   before_script:
+    - Copy-Item "env_backup.txt" -Destination ".env"
     - echo "Setting up for Sonarqube Analysis on PD $CI_COMMIT_REF_NAME branch"
     - apk upgrade --update-cache --available && apk add openssl
     - openssl s_client -connect   usadc-vspsq01.quintiles.net:443 | keytool -import -noprompt -alias sonarqbue_test -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit
@@ -37,7 +38,7 @@ Perform Sonarqube Analysis and quality gate:
     - echo "Running Sonarqube Analysis on $CI_COMMIT_REF_NAME branch"
     - apk upgrade --update-cache --available && apk add openssl
     - npm install --force -s
-    - npm run test -s -- --coverage --watchAll=false
+    - npm run coverage 
     - sh CI-Scripts/sonarqube.sh branch > /tmp/sonar.log
     - echo "Running Sonarqube quality gate on $CI_COMMIT_REF_NAME branch"
     - sh CI-Scripts/qualitygate.sh
