--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - sonar-scan
   - build_and_deploy
 
-test:
+.test:
   stage: test
 
   tags: 
@@ -29,7 +29,7 @@ Perform Sonarqube Analysis and quality gate:
   image: sonarsource/sonar-scanner-cli
   stage: sonar-scan
   before_script:
-    - Copy-Item "env_backup.txt" -Destination ".env"
+    - cp env_backup.txt .env
     - echo "Setting up for Sonarqube Analysis on PD $CI_COMMIT_REF_NAME branch"
     - apk upgrade --update-cache --available && apk add openssl
     - openssl s_client -connect   usadc-vspsq01.quintiles.net:443 | keytool -import -noprompt -alias sonarqbue_test -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit
@@ -51,7 +51,7 @@ Perform Sonarqube Analysis and quality gate:
     variables:
       - $ENVIRONMENT== "dev"
 
-build:
+.build:
   stage: build_and_deploy
 
   tags: 
