--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test-deploy:
     - pd-ui-test
 
   variables:
-    GIT_CLONE_PATH: "${CI_BUILDS_DIR}/${PACKAGE}"
+    GIT_CLONE_PATH: "${CI_BUILDS_DIR}/${PULL}"
 
   script: 
     - echo "Start building App"
