cicd unit test pipeline changed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ unit-test:
   allow_failure: true
   only:
     refs:
-      - CICD
+      - develop
     variables: 
       - $ENVIRONMENT== "dev"
 
@@ -57,7 +57,7 @@ Perform Sonarqube Analysis and quality gate:
     - ca2ugitla006p-D4
   only:
     refs:
-      - CICD
+      - develop
     variables: 
       - $ENVIRONMENT== "dev"
 
@@ -81,7 +81,7 @@ dev-deploy:
       
   only:
     refs:
-      - CICD
+      - develop
     variables: 
       - $ENVIRONMENT== "dev"
 
