--- a/package.json
+++ b/package.json
@@ -89,7 +89,10 @@
       "!src/features/Container/Search/Data/row.data.js",
       "!src/features/Container/Search/Data/row.js",
       "!src/features/Container/Search/Data/search.metadata.js",
-      "!src/features/Container/Search/SearchCard.js"
+      "!src/features/Container/Search/SearchCard.js",
+      "!src/features/Container/Search/Data/column.data.js",
+      "!src/features/Components/Dashboard/columns.js",
+      "!src/features/Container/Protocols/__test__/data.js"
     ]
   },
   "eslintConfig": {
