sonar qube fixes

--- a/package.json
+++ b/package.json
@@ -92,7 +92,13 @@
       "!src/features/Container/Search/SearchCard.js",
       "!src/features/Container/Search/Data/column.data.js",
       "!src/features/Components/Dashboard/columns.js",
-      "!src/features/Container/Protocols/__test__/data.js"
+      "!src/features/Container/Protocols/__test__/data.js",
+      "!src/features/Container/Search/saga.js",
+      "!src/features/Container/Search/FilterSection.js",
+      "!src/features/Container/Admin/adminSlice.js",
+      "!src/features/Container/Admin/saga.js",
+      "!src/features/Container/Search/SearchListingSection.js",
+      "!src/features/Components/Dashboard/FollowingTable.js"
     ]
   },
   "eslintConfig": {
