--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,7 +106,8 @@ dev-deploy-other:
       
   only:
     refs:
-      - Protocol-View-New
+      # - Protocol-View-New
+      - develop
     variables: 
       - $ENVIRONMENT== "dev"
 
