--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@inovua/reactdatagrid-community": "^4.10.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.1.0",
@@ -14,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "html-table-to-json": "^1.0.0",
     "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
@@ -35,7 +37,8 @@
     "replaceall": "^0.1.6",
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
