--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^34.0.0",
+    "@ckeditor/ckeditor5-react": "^5.0.0",
     "@inovua/reactdatagrid-community": "^4.10.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
