--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
+    "@ckeditor/ckeditor5-editor-inline": "^34.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.0",
     "@inovua/reactdatagrid-community": "^4.10.0",
     "@material-ui/core": "^4.11.2",
@@ -28,7 +29,9 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-collapsible": "^2.8.1",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
+    "react-floating-button-menu": "^2.1.1",
     "react-idle-timer": "^4.5.1",
     "react-pdf": "^5.7.0",
     "react-redux": "^7.1.3",
@@ -41,6 +44,7 @@
     "replaceall": "^0.1.6",
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
+    "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   },
