--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^34.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.0",
+    "@editorjs/editorjs": "^2.24.3",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/table": "^2.0.2",
     "@inovua/reactdatagrid-community": "^4.10.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
@@ -31,6 +37,8 @@
     "react-collapsible": "^2.8.1",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
+    "react-editor-js": "^2.0.6",
+    "react-file-viewer": "^1.2.1",
     "react-floating-button-menu": "^2.1.1",
     "react-idle-timer": "^4.5.1",
     "react-pdf": "^5.7.0",
