--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "react-file-viewer": "^1.2.1",
     "react-floating-button-menu": "^2.1.1",
     "react-idle-timer": "^4.5.1",
+    "react-joyride": "^2.5.0",
     "react-pdf": "^5.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
+    "react-tooltip": "^4.2.21",
+    "react-use": "^17.4.0",
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
     "redux-saga": "^1.1.3",
