--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "html-table-to-json": "^1.0.0",
