--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
     "react-editor-js": "^2.0.6",
-    "react-file-viewer": "^1.2.1",
+    "react-file-viewer": "^0.0.1",
     "react-floating-button-menu": "^2.1.1",
     "react-idle-timer": "^4.5.1",
     "react-joyride": "^2.5.0",
     "react-pdf": "^5.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^7.0.3",
     "react-tooltip": "^4.2.21",
     "react-use": "^17.4.0",
