--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.2",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   },
@@ -150,9 +151,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@typescript-eslint/parser": "^5.34.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "pm2": "^4.5.1",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^4.7.4"
   }
 }
