--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
+    "pd:install": "npm install --legacy-peer-deps",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
