--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ Perform Sonarqube Analysis and quality gate:
   before_script:
     - echo "Setting up for Sonarqube Analysis on PD $CI_COMMIT_REF_NAME branch"
     - apk upgrade --update-cache --available && apk add openssl
-    - openssl s_client -connect   usadc-vspsq01.quintiles.net:443 | keytool -import -noprompt -alias sonarqbue_test -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit
+    - openssl s_client -connect   sonarqube.quintiles.com:443 | keytool -import -noprompt -alias sonarqbue_test -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit
 
   script:
     - echo "Running Sonarqube Analysis on $CI_COMMIT_REF_NAME branch"
@@ -61,6 +61,7 @@ Perform Sonarqube Analysis and quality gate:
     refs:
       - merge_requests
       - develop
+      - Sonar-Check
     variables: 
       - $ENVIRONMENT== "dev"
 
