--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-collapsible": "^2.8.1",
     "react-dom": "^17.0.1",
     "react-idle-timer": "^4.5.1",
+    "react-pdf": "^5.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
