Sonar Issues check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ Perform Sonarqube Analysis and quality gate:
     refs:
       - merge_requests
       - develop
+      - Sonar-Check
     variables: 
       - $ENVIRONMENT== "dev"
 
