--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.1.0",
+    "@wojtekmaj/react-hooks": "^1.13.0",
     "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.19.1",
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
+    "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
     "redux-saga": "^1.1.3",
     "replaceall": "^0.1.6",
