--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.1.0",
+    "@remirror/pm": "^2.0.3",
+    "@remirror/react": "^2.0.24",
+    "@remirror/react-editors": "^1.0.24",
+    "@tinymce/tinymce-react": "^4.2.0",
     "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.19.1",
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
@@ -34,6 +40,7 @@
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
     "redux-saga": "^1.1.3",
+    "remirror": "^2.0.23",
     "replaceall": "^0.1.6",
     "sass": "^1.29.0",
     "source-map-explorer": "^2.5.2",
