--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.1.0",
+    "@remirror/core": "^2.0.11",
     "@remirror/pm": "^2.0.3",
+    "@remirror/preset-core": "^2.0.13",
     "@remirror/react": "^2.0.24",
     "@remirror/react-editors": "^1.0.24",
     "@tinymce/tinymce-react": "^4.2.0",
