--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-collapsible": "^2.8.1",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.1",
     "react-idle-timer": "^4.5.1",
     "react-pdf": "^5.7.0",
