--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ lint-check:
     refs:
       - merge_requests
       - develop
-      
+      - development
     variables: 
       - $ENVIRONMENT== "dev"
       - $ENVIRONMENT== "test"
@@ -59,6 +59,7 @@ unit-test-coverage:
     refs:
       - merge_requests
       - develop
+      - development
       
     variables: 
       - $ENVIRONMENT== "dev"
@@ -86,6 +87,7 @@ Perform Sonarqube Analysis and quality gate:
     refs:
       - merge_requests
       - develop
+      - development
     variables: 
       - $ENVIRONMENT== "dev"
       - $ENVIRONMENT== "test"
@@ -110,7 +112,7 @@ dev-deploy:
       
   only:
     refs:
-      - develop
+      - development
     variables: 
       - $ENVIRONMENT== "dev"
 
