--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/pickers": "^4.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.1.0",
+    "ag-grid-community": "^29.1.0",
+    "ag-grid-react": "^29.1.0",
     "apollo-react": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react/-/3.19.1",
     "apollo-react-icons": "https://imshealth.myget.org/F/apollo/auth/81155eb2-e88d-47dc-bc91-954d00510908/npm/apollo-react-icons/-/1.0.0-beta.7",
     "axios": "^0.21.0",
