--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.43",
     "prop-types": "^15.8.1",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
